# HALDXGame

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  HALDXGame.cpp  HALDXGame.h  README.md
SchoolTest/: Application.cpp  Application.h  CMakeLists.txt  CollisionOBBScene.cpp  CollisionOBBScene.h  GameClearScene.cpp  GameClearScene.h  GameMainScene.cpp  GameMainScene.h  Shape3DScene.cpp  Shape3DScene.h  TitleScene.cpp  TitleScene.h  animationsystem.cpp  animationsystem.h  bg.cpp  bg.h  boss.cpp  boss.h  camera.cpp  camera.h  collisionmanager.cpp  collisionmanager.h  enemy.cpp  enemy.h  enemybullet.cpp  enemybullet.h  explosion.cpp  explosion.h  imgui.ini  main.cpp  main.h  mygame.cpp  mygame.h  player.cpp  player.h  playerbullet.cpp  playerbullet.h  randomengine.cpp  randomengine.h  (+2 more)
SchoolTest/shader/: simpleTexPS.hlsl  simpleTexVS.hlsl  simpleVS.hlsl
SchoolTest/system/: Application.cpp  Application.h  BoxDrawer.h  C3DShape.cpp  C3DShape.h  CBoxMesh.h  CConeMesh.cpp  CConeMesh.h  CCylinderMesh.cpp  CMaterial.h  CMesh.h  CPlaneMesh.cpp  CPlaneMesh.h  CPolar3D.h  CShader.cpp  CSphereMesh.h  CSprite.cpp  CTexture.h  CapsuleDrawer.cpp  CommonTypes.h  CylinderDrawer.cpp  DebugUI.h  DirectWrite .cpp  FadeTransition.cpp  FadeTransition.h  IScene.h  Scene.cpp  Scene.h  SceneTransition.h  SphereDrawer.cpp  SphereDrawer.h  Transform.h  camera.cpp  camera.h  collision.cpp  collision.h  dx11helper.cpp  dx11helper.h  fpscontrol.h  imgui.ini  (+4 more)
assets/: Human.tof
assets/animation/: Dance.fbx  Idle.fbx  Singing.fbx  Walking.fbx
assets/models/: Bullet.fbx  bg.fbx  enemy1.fbx  gameover.fbx  win.fbx
assets/models/.mayaSwatches/: grass.dds_hcm.swatch
assets/models/player/: Idol.fbx  idle.fbx  man.fbx
cmake/fake_directxmath/: directxmathConfig.cmake
shaders/: Basic.hlsli  Basic_PS.hlsl  Skinned_VS.hlsl
src/: Main.cpp  main.cpp
src/Debug/: SceneHierarchy.cpp  SceneHierarchy.h
src/app/: HalGame.cpp  HalGame.h
src/base/: AnimationManager.cpp  AnimationManager.h  AnimatorC.cpp  AnimatorC.h  BoneObj.cpp  BoneObj.h  BoxCollisionC.cpp  BoxCollisionC.h  CollisionC.cpp  CollisionC.h  Component.cpp  Component.h  Component.h~  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameObject.h~  Global.h  HalDebugRenderer.cpp  HalDebugRenderer.h  ImageC.cpp  ImageC.h  JoltListener.cpp  JoltListener.h  Layers.h  MixamoRagdollC.cpp  MixamoRagdollC.h  MixamorigBoneC.cpp  MixamorigBoneC.h  ModelC.cpp  ModelC.h  ModelComponent.cpp  ModelComponent.h  Scene.cpp  Scene.h  TransformC.cpp  TransformC.h  TransformComponent.cpp  TransformComponent.h
src/base/animation/: AnimationManager.cpp  AnimatorC.cpp  BoneObj.cpp  BoneObj.h  MixamorigBoneC.cpp  MixamorigBoneC.h
src/base/debug/: HalDebugRenderer.h  SceneHierarchy.cpp  SceneHierarchy.h
src/base/physics/: BoxCollisionC.cpp  BoxCollisionC.h  CapsuleCollisionC.cpp  CapsuleCollisionC.h  CollisionC.cpp  CollisionC.h  JoltListener.h  MixamoRagdollC.cpp  MixamoRagdollC.h  SphereCollisionC.cpp  SphereCollisionC.h
src/gameplay/gameobject/: Bullet.cpp  Bullet.h  BulletEmitter.cpp  BulletEmitter.h  House.cpp  House.h  Idol.cpp  Idol.h  Miku.cpp  Miku.h  Player.cpp  Player.h
src/gameplay/scene/: GamePlayScene.cpp  GamePlayScene.h  GameoverScene.cpp  GameoverScene.h  TestSceen.cpp  TestSceen.h  TestScene.cpp  TestScene.h  TitleScene.cpp  TitleScene.h  WinScene.cpp  WinScene.h
src/modules/DX/: AoSNodeManager.cpp  AoSNodeManager.h  BasicEffect.cpp  CMakeLists.txt  DXGame.cpp  DXGame.h  DeviceResources.cpp  DeviceResources.h  Effects.h  Game.cpp  Game.h  GameApp.cpp  GameApp.h  Main.cpp  ModelManager.cpp  ModelManager.h  TextureManager.h  pch.h
src/modules/DX/Common/: BaseEffect.cpp  BasicEffect.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraController.h  CpuTimer.cpp  CpuTimer.h  DXTrace.cpp  DXTrace.h  DebugLayer.h  EffectHelper.h  Effects.h  GameObject.cpp  GameObject.h  GpuTimer.h  IEffect.h  ImageObject.cpp  ImageObject.h  Material.h  MeshData.h  ModelManager.cpp  ModelManager.h  ModelObject.cpp  ModelObject.h  RenderStates.h  TextureManager.h  Transform.h  Vertex.h  XUtil.h  d3dApp.cpp  d3dApp.h
src/modules/GameFramework/: CMakeLists.txt  GameFramework.cpp  GameFramework.h
src/modules/GameKit/: CMakeLists.txt  SoAStorage.h
src/modules/Physics/: CMakeLists.txt  Main.cpp  main.cpp
src/modules/RubikCube/: Application.cpp  CMakeLists.txt  ImageDisplayScene.cpp  RubikCubeScene.cpp  RubikCubeScene.h  fpscontrol.h  game.cpp  imgui.ini  scenemanager.cpp  scenemanager.h
src/modules/RubikCube/shader/: GeometryShader.hlsl  common.hlsl
src/modules/RubikCube/system/: BoxDrawer.cpp  C3DShape.h  CBoxMesh.h  CConeMesh.cpp  CConeMesh.h  CCylinderMesh.cpp  CCylinderMesh.h  CMaterial.h  CShader.cpp  CShader.h  CSphereMesh.h  CTexture.cpp  CTexture.h  CapsuleDrawer.cpp  DebugUI.h  SphereDrawer.cpp  dx11helper.cpp  dx11helper.h  renderer.h
